--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                  <img src="img/person1.jpg" alt="" class="circle">
                </a>
                <a href="#">
-                 <span class="name white-text">John Doe</span>
+                 <span class="name white-text">Harrison Ebube</span>
                </a>
                <a href="#">
-                 <span class="email white-text">jdoe@email.test</span>
+                 <span class="email white-text">Harrison@cellulant.com</span>
                </a>
              </div>
           </li>
@@ -71,48 +71,48 @@
     <div class="row">
 
       <div class="col s12 m6 l3">
-        <div class="card-panel #00796b teal darken-2 white-text center">
+        <div class="card-panel #00796b light-green darken-3 white-text center">
           <i class="material-icons medium">insert_emoticon</i>
           <h5>Monthly visitors</h5>
           <h3 class="count">28300</h3>
 
-          <div class="progress grey lighten-1">
-            <div class="determinate white"style="width:40%"></div>
+          <div class="progress white">
+            <div class="determinate blue lighten-1"style="width:40%"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m6 l3">
-          <div class="card-panel center">
+          <div class="card-panel grey darken-1 white-text center">
             <i class="material-icons medium">mode_edit</i>
             <h5>Blog posts</h5>
             <h3 class="count">105</h3>
   
-            <div class="progress grey lighten-1">
+            <div class="progress white">
               <div class="determinate blue lighten-1"style="width:20%"></div>
             </div>
           </div>
       </div>
 
       <div class="col s12 m6 l3">
-          <div class="card-panel #00796b teal darken-2 white-text center">
+          <div class="card-panel brown lighten-1 white-text center">
             <i class="material-icons medium">mode_comment</i>
             <h5>Comments</h5>
             <h3 class="count">1200</h3>
   
-            <div class="progress grey lighten-1">
-              <div class="determinate white"style="width:40%"></div>
+            <div class="progress white">
+              <div class="determinate blue lighten-1"style="width:40%"></div>
             </div>
           </div>
       </div>
 
       <div class="col s12 m6 l3">
-          <div class="card-panel center">
+          <div class="card-panel teal darken-2 white-text center">
             <i class="material-icons medium">supervisor_account</i>
             <h5>Users</h5>
             <h3 class="count">350</h3>
   
-            <div class="progress grey lighten-1">
+            <div class="progress white">
               <div class="determinate blue lighten-1"style="width:10%"></div>
             </div>
           </div>
@@ -288,7 +288,77 @@
   <div id="post-modal" class="modal">
     <div class="modal-content">
       <h4>Add Post</h4>
+      <form>
+        <div class="input-field">
+          <input type="text" id="title">
+          <label for="title">Title</label>
+        </div>
+        <div class="input-field">
+          <select class="select">
+            <option value="" disabled selected>Select option</option>
+            <option value="1">Web Development</option>
+            <option value="2">Graphic Design</option>
+            <option value="3">Tech Gadgets</option>
+            <option value="4">Other</option>
+          </select>
+          <label for="category"></label>
+        </div>
+        <div class="input-field">
+          <textarea name="body" id="body" class="materialize-textarea"></textarea>
+          <label for="body">Body</label>
+        </div>
+      </form>
+      <div class="modal-footer">
+        <a href="#!" class="modal-acion modal-close btn blue white-text">Submit</a>
+      </div>
     </div>
+  </div>
+
+  <!--Add Category Modal-->
+  <div id="category-modal" class="modal">
+      <div class="modal-content">
+        <h4>Add Category</h4>
+        <form>
+          <div class="input-field">
+            <input type="text" id="title">
+            <label for="title">Title</label>
+          </div>
+        </form>
+        <div class="modal-footer">
+          <a href="#!" class="modal-acion modal-close btn blue white-text">Submit</a>
+        </div>
+      </div>
+  </div>
+
+  <!--Add User Modal-->
+  <div id="user-modal" class="modal">
+      <div class="modal-content">
+        <h4>Add User</h4>
+        <form>
+          <div class="input-field">
+            <input type="text" id="name">
+            <label for="name">Name</label>
+          </div>
+
+          <div class="input-field">
+            <input type="email" id="email">
+            <label for="email">Email</label>
+          </div>
+
+          <div class="input-field">
+            <input type="password" id="password1">
+            <label for="password">Password</label>
+          </div>
+
+          <div class="input-field">
+            <input type="password" id="password2">
+            <label for="password">Confirm Password</label>
+          </div>
+        </form>
+        <div class="modal-footer">
+          <a href="#!" class="modal-acion modal-close btn blue white-text">Submit</a>
+        </div>
+      </div>
   </div>
 
   <!--Preloader-->
@@ -309,6 +379,7 @@
   
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
   <script src="./js/chart.js"></script>
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
@@ -327,6 +398,12 @@
 
            //init sidenav
           $('.button-collapse').sideNav();
+
+          //init modal
+          $('.modal').modal();
+
+          //init select
+          $('.select').material_select();
 
           //counter
           $('.count').each(function(){
@@ -373,6 +450,8 @@
             Materialize.toast('Todo Removed', 3000);
             e.preventDefault();
           });
+
+          CKEDITOR.replace( 'body' );
 
         });
       }, 1000);
