--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col s12 m6 l3">
           <div class="card-panel grey darken-1 white-text center">
             <i class="material-icons medium">mode_edit</i>
-            <h5>Blog posts</h5>
+            <h5>Mula posts</h5>
             <h3 class="count">105</h3>
   
             <div class="progress white">
